<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rainvisitor.ipss.MainActivity">

    <TextView
        android:id="@+id/textView_Work_order_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Work_order_number"
        android:textColor="@color/textColor_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <Switch
        android:id="@+id/switch_Vibration_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibration_sensor"
        android:textColor="@color/textColor_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <LinearLayout
        android:id="@+id/layout_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396">

        <TextView
            android:id="@+id/textView_tittle"
            style="@style/TextViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/effectivenessAnalysis"
            android:textColor="@color/textColor_main" />

        <TextView
            android:id="@+id/textView_Equipment_efficiency"
            style="@style/TextViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tittle"
            tools:text="整體設備效率 0.00%" />

        <TextView
            android:id="@+id/textView_integrated_productivity"
            style="@style/TextViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textColor="@color/textColor_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tittle"
            tools:text="設備綜合生產力 0.00%" />

        <TextView
            android:id="@+id/textView_Load_time_rate"
            style="@style/TextViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textColor="@color/textColor_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tittle"
            tools:text="設備負荷時間率 0.00%" />

        <TextView
            android:id="@+id/textView_movement_rate"
            style="@style/TextViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textColor="@color/textColor_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tittle"
            tools:text="設備稼動率 0.00%" />

        <TextView
            android:id="@+id/textView_productivity_efficiency"
            style="@style/TextViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textColor="@color/textColor_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tittle"
            tools:text="設備產能效率 0.00%" />

        <TextView
            android:id="@+id/textView_yield"
            style="@style/TextViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textColor="@color/textColor_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tittle"
            tools:text="產品生產良率 0.00%" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_processing_machine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196">

        <TextView
            android:id="@+id/textView_Processing_machine"
            style="@style/TextViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/processing_machine"
            android:textColor="@color/textColor_main" />

        <TextView
            android:id="@+id/textView_Voltage"
            style="@style/TextViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tittle"
            tools:text="電壓:0.00V" />

        <TextView
            android:id="@+id/textView_Current"
            style="@style/TextViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical"
            android:textColor="@color/textColor_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tittle"
            tools:text="電流:0.00A" />

        <TextView
            android:id="@+id/textView_power"
            style="@style/TextViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical"
            android:textColor="@color/textColor_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tittle"
            tools:text="功率:0.00W" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872">

        <TextView
            android:id="@+id/textView_Plan_production"
            style="@style/TextViewProductStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tittle"
            tools:text="計畫產量\n0" />

        <TextView
            android:id="@+id/textView_Amount_completed"
            style="@style/TextViewProductStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textColor="@color/textColor_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tittle"
            tools:text="完成數量\n0" />

        <TextView
            android:id="@+id/textView_Unfinished_quantity"
            style="@style/TextViewProductStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textColor="@color/textColor_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tittle"
            tools:text="未完成數量\n0" />

        <TextView
            android:id="@+id/textView_Remove_the_quantity"
            style="@style/TextViewProductStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textColor="@color/textColor_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tittle"
            tools:text="剃除數量\n0" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_baking_machine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47">

        <TextView
            android:id="@+id/textView_Baking_machine"
            style="@style/TextViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baking_machine"
            android:textColor="@color/textColor_main" />

        <TextView
            android:id="@+id/textView_temperature"
            style="@style/TextViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tittle"
            tools:text="溫度:0.00C" />

        <TextView
            android:id="@+id/textView_humidity"
            style="@style/TextViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical"
            android:textColor="@color/textColor_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tittle"
            tools:text="濕度0.00%" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_Testing_machine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="306dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_Testing_machine"
            style="@style/TextViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/testing_machine"
            android:textColor="@color/textColor_main"
            app:layout_constraintTop_toBottomOf="@+id/layout_baking_machine"
            tools:layout_editor_absoluteX="260dp" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical"
            android:text="等待檢測"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tittle" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
